# DawnCast

./: .gitignore  CLAUDE.md  diagnose_sync.sh  fix_option_a.sh  process_psql.py  run_backfill.sh
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: deps.py  main.py  middleware.py  response.py  schemas.py
backend/app/routers/: account.py  activity.py  admin.py  auth_proxy.py  daily_orders.py  dict.py  episodes.py  jobs.py  (+4 more)
backend/deploy/: Dockerfile.api  Dockerfile.backup  Dockerfile.worker  README.md  docker-compose.yml  entrypoint-api.sh  entrypoint-worker.sh  fly.api.toml  fly.worker.toml  healthcheck.py  zeabur-template.yaml
backend/engine/: worker.py
backend/scripts/: __init__.py  apply_migrations.py  backfill_audio.py  backfill_examples_freedictionary.py  backfill_ipa_cmudict.py  enqueue_missing_translations.py  export_openapi.py  gemini_assistant_helper.py  generate_one.py  inspect_pod.py  python_backfill.py  run_langgraph_pod.py  seed_dict_cache.py  seed_episodes.py  tatoeba_load_and_backfill.py
backend/shared/: config.py  errors.py  lemmatize.py  models.py
backend/tests/: _auth.py  conftest.py  test_account.py  test_admin.py  test_api.py  test_auth_proxy.py  test_config.py  test_cors_middleware.py  test_daily_orders_router.py  test_dict.py  test_dict_audio.py  test_dict_lookup_lemma.py  test_dict_rate_limit.py  test_favorites_router.py  test_generation.py  test_jobs.py  test_langgraph_pod.py  test_lemmatize.py  test_media.py  test_notifications.py  test_openapi_contract.py  test_pipeline.py  test_settings_router.py  test_sources.py
(+216 files in other folders)
