[project]
name = "dawncast-backend"
version = "0.1.0"
description = "DawnCast 後端：FastAPI 服務層 + 夜間批次生成引擎"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "httpx>=0.28",
    "edge-tts>=7.2",
    "boto3>=1.35",
    "python-jose[cryptography]>=3.3",
    "numpy>=2.1",
    "opencc-python-reimplemented>=0.1.7",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "poethepoet>=0.32",
]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
type-check = "mypy app engine shared"
test = "pytest"

[tool.ruff]
line-length = 100
target-version = "py312"
# scripts/ 是單次執行的 utility（資料 backfill、批次翻譯），不參與部署也不該卡 production lint 訊號。
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "engine", "shared"]
